🐛 fixed body overflow x direction

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -13,8 +13,9 @@
 html {
   font-size: 13px;
 }
-~ body {
+body {
   font-family: "Roboto", sans-serif;
+  overflow-x: hidden;
 }
 
 ul {
